# STLViewerLearn

./: .gitmodules  CMakeLists.txt  README.md
src/GeomCalc/: Box.cpp  Box.h  CadBase.cpp  CadBase.h  GeomCalc.h  Matrix.cpp  Matrix.h  Point.cpp  Point.h  Vector.cpp  Vector.h
src/GeomKernel/: Entity.cpp  Entity.h
src/STLViewer/: Main.cpp  STLWindows.cpp  STLWindows.h
src/glContext/: Camera.cpp  Camera.h  OpenGLDC.cpp  OpenGLDC.h
third/glad/include/glad/: glad.h
third/glad/src/: glad.c
